# cicd

./: pyproject.toml
.github/workflows/: ci.yml  release.yml
src/cicd_oihanc/: __init__.py  main.py
src/tests/: test_unit.py
